Fix overflow in legend

--- a/app/assets/stylesheets/cities.css.scss
+++ b/app/assets/stylesheets/cities.css.scss
@@ -25,6 +25,8 @@ html, body, .map-wrapper, #map {
   margin-top: 20px;
 }
 #legend {
+  overflow-x: hidden;
+
   .slider {
     width: 100%;
   }
